# my-docs

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-08.jsonl  2026-07-12.jsonl
src/mydocs/: cli.py  docsync.py  fleet.py  page.py
tests/: conftest.py  test_cli.py  test_docsync.py  test_fleet.py  test_page.py
